--- a/templates/template.twig.html
+++ b/templates/template.twig.html
@@ -9,7 +9,16 @@
     <title>Document</title>
 </head>
 <body>
-
+    <header>
+        <ul class="nav justify-content-end">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Login</a>
+            </li>
+            <li class="nav-item">
+                    <a class="nav-link" href="/register">Registro</a>
+            </li>
+        </ul>
+    </header>
 {% block body %}
 {% endblock %}
 
